--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/chat.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/chat.rtl.css
@@ -98,7 +98,7 @@
   right: 6px;
 }
 .chatPage .chat {
-  margin: -5px;
+  margin: 0 -5px;
 }
 .chatPage .chat .users-list {
   padding-top: 50px;
@@ -108,11 +108,14 @@
 }
 .chatPage .chat .search-friend {
   position: fixed;
-  top: 70px;
+  top: 65px;
   right: 0;
   left: 0;
   background: #eeeeee;
   z-index: 1;
+}
+.chatPage .chat .content {
+  position: relative;
 }
 .chatPage .chat .content.stateChat .conversasion .header {
   position: fixed;
@@ -144,11 +147,13 @@
   display: none;
 }
 .chat .error {
-  z-index: 1;
+  z-index: 2;
   color: #ffffff;
   position: absolute;
   width: 100%;
-  top: 50px;
+  top: 0;
+  right: 0;
+  left: 0;
   box-shadow: 0 0 3px black;
   text-align: center;
   background: #db4437;
@@ -164,8 +169,14 @@
   -moz-transition: height 0.3s;
   transition: height 0.3s;
 }
+@media (max-width: 600px) {
+  .chat .error {
+    top: 65px;
+    position: fixed;
+  }
+}
 .chat .error.disconnected {
-  padding: 5px 10px;
+  padding: 0 10px;
   height: 60px;
 }
 .chat .content {
@@ -376,6 +387,14 @@
 .chat .content.stateChat .conversasion {
   left: 0;
 }
+.chat .content.stateChat .error.disconnected {
+  top: 50px;
+}
+@media (max-width: 600px) {
+  .chat .content.stateChat .error.disconnected {
+    top: 115px;
+  }
+}
 .chat .content:not(.stateChat) .menu-content {
   left: 0;
 }
@@ -470,6 +489,9 @@
   -ms-transform: rotate(45deg);
   -o-transform: rotate(45deg);
   transform: rotate(45deg);
+}
+.chat .content .conversasion .chat-content {
+  position: relative;
 }
 .chat .content .conversasion .chat-content .messages {
   width: calc(100% - 5px);
@@ -675,10 +697,6 @@
   align-items: stretch;
   -webkit-justify-content: space-between;
   justify-content: space-between;
-}
-.chat-item-preview md-toolbar .md-toolbar-tools > .md-button {
-  margin-left: 0;
-  margin-right: 0;
 }
 .chat-item-preview md-toolbar .download-btn {
   min-width: 0;
