--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
@@ -127,9 +127,9 @@
                             </div>
                         </div>
                         <div class="side back">
-                            @*<button type="button" class="pin-btn" ng-click="f.pin(slide)" ng-class="{pinned:slide.pin}">
+                            <button type="button" class="pin-btn" ng-click="f.pin(slide)" ng-class="{pinned:slide.pin}">
                                 <md-icon md-svg-icon="b:pin"></md-icon>
-                            </button>*@
+                            </button>
                             <div class="data-wrapper" ng-click="f.flip(slide)">
                                 <div class="img-container" ng-if="::slide.cover.image">
                                     <img ng-src="{{::slide.cover.image}}" alt="font image" />
