--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/chat.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/chat.less
@@ -563,8 +563,6 @@
             }
 
             .chat-content {
-                position: relative;
-
                 .messages {
                     width: ~"calc(100% - 5px)";
                     padding: 0;
@@ -807,7 +805,7 @@
         .md-toolbar-tools {
             font-size: 18px;
             height: 40px !important;
-            padding: 0;
+            padding: 0 8px;
             .displayFlex;
             .align-items(stretch);
             .justifyContet(space-between);
