added yellow BG to flashcard tab in box

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/Index2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/Index2.cshtml
@@ -28,7 +28,7 @@
             <md-tab-label><span>@GeneralResources.Quizzes</span></md-tab-label>
         </md-tab>
         <md-tab ui-sref="box.flashcards" md-active="b.isActiveState('box.flashcards')">
-            <md-tab-label><span>@FlashcardResources.CardsLabel</span></md-tab-label>
+            <md-tab-label><span class="flashcard-title">@FlashcardResources.CardsLabel</span></md-tab-label>
         </md-tab>
         <md-tab ui-sref="box.members" md-active="b.isActiveState('box.members')">
             <md-tab-label><span>@GeneralResources.Members</span></md-tab-label>
