--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
@@ -386,8 +386,26 @@ md-menu-item > a.md-button {
     }
 }
 
-.box-nav-bar ~ div {
-    margin: 0 -8px;
+.box-nav-bar {
+    ~ div {
+        margin: 0 -8px;
+    }
+
+    .md-tab .flashcard-title {
+        padding: 5px 15px;
+    }
+
+    .md-tab:not(.md-active) {
+        .flashcard-title {
+            border-radius: 5px;
+            background: #ebbc18;
+        }
+
+        &:hover .flashcard-title {
+            background: #ffdc61;
+            color: #0d3a52;
+        }
+    }
 }
 
 .invite-btn {
