--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
@@ -163,31 +163,31 @@
             </md-button>
             <md-menu-content md-menu-align-target class="keyboard-menu">
                 <md-menu-item>
-                    <div><span class="key">&larr;</span><span class="capitalize">@FlashcardResources.Previous</span></div>
+                    <div><span class="key">&larr;</span><span class="info capitalize">@FlashcardResources.Previous</span></div>
                 </md-menu-item>
                 <md-menu-item>
-                    <div><span class="key">&rarr;</span><span class="capitalize">@UniversityResources.Next</span></div>
+                    <div><span class="key">&rarr;</span><span class="info capitalize">@UniversityResources.Next</span></div>
                 </md-menu-item>
                 <md-menu-item>
-                    <div><span class="key">&uarr;</span><span>@FlashcardResources.FlipUp</span></div>
+                    <div><span class="key">&uarr;</span><span class="info">@FlashcardResources.FlipUp</span></div>
                 </md-menu-item>
                 <md-menu-item>
-                    <div><span class="key">&darr;</span><span>@FlashcardResources.FlipDown</span></div>
+                    <div><span class="key">&darr;</span><span class="info">@FlashcardResources.FlipDown</span></div>
                 </md-menu-item>
                 <md-menu-item>
-                    <div><span class="key">P</span><span class="capitalize">@FlashcardResources.Pinned</span></div>
+                    <div><span class="key">P</span><span class="info capitalize">@FlashcardResources.Pinned</span></div>
                 </md-menu-item>
                 <md-menu-item>
-                    <div><span class="key">S</span><span class="capitalize">@FlashcardResources.Shuffle</span></div>
+                    <div><span class="key">S</span><span class="info capitalize">@FlashcardResources.Shuffle</span></div>
                 </md-menu-item>
                 <md-menu-item>
-                    <div><span class="key">F</span><span class="capitalize">@FlashcardResources.Front</span></div>
+                    <div><span class="key">F</span><span class="info capitalize">@FlashcardResources.Front</span></div>
                 </md-menu-item>
                 <md-menu-item>
-                    <div><span class="key">K</span><span class="capitalize">@FlashcardResources.Back</span></div>
+                    <div><span class="key">K</span><span class="info capitalize">@FlashcardResources.Back</span></div>
                 </md-menu-item>
                 <md-menu-item>
-                    <div><span class="key">B</span><span class="capitalize">@FlashcardResources.Both</span></div>
+                    <div><span class="key">B</span><span class="info capitalize">@FlashcardResources.Both</span></div>
                 </md-menu-item>
             </md-menu-content>
         </md-menu>
