--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
@@ -663,9 +663,10 @@ md-menu-item {
     }
 
     .ad {
+        max-width: 970px;
         text-align: center;
         //display: inline;
-        width:970px;
+        width:100%;
         height:98px;
         margin:0 auto;
     }
