--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.rtl.css
@@ -567,8 +567,9 @@ md-menu-item.blue svg {
   }
 }
 .itemPage .ad {
+  max-width: 970px;
   text-align: center;
-  width: 970px;
+  width: 100%;
   height: 98px;
   margin: 0 auto;
 }
