--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/CreatePartial.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/CreatePartial.cshtml
@@ -17,7 +17,7 @@
             </div>
         </md-input-container>
         <div class="btn-wrapper" flex="100" flex-gt-xs="50">
-            <button type="button" flex="100" flex-gt-xs="50" ng-click="f.publish()" ng-disabled="f.disabled" class="action-btn">@FlashcardResources.Create</button>
+            <button type="button" flex="100" flex-gt-xs="50" ng-click="f.publish()" ng-disabled="f.disabled" class="action-btn capitalize">@FlashcardResources.Create</button>
         </div>
     </div>
     <div class="flashcard-body">
@@ -71,7 +71,7 @@
         </ol>
     </div>
     <div class="bottom">
-        <button type="button" ng-click="f.publish()" ng-disabled="f.disabled" class="action-btn">@FlashcardResources.Create</button>
+        <button type="button" ng-click="f.publish()" ng-disabled="f.disabled" class="action-btn capitalize">@FlashcardResources.Create</button>
     </div>
 </form>
 <script type="text/ng-template" id="card-form.html">
