--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/chat.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/chat.less
@@ -196,9 +196,9 @@
         top: 0;
         left: 0;
         right: 0;
-        box-shadow: 0 0 3px black;
+        box-shadow: 0 0 1px black;
         text-align: center;
-        background: @textColorRed;
+        background: #1d3a02;
         overflow: hidden;
         .displayFlex;
         height: 0;
@@ -215,7 +215,7 @@
 
         &.disconnected {
             padding: 0 10px;
-            height: 60px;
+            height: 40px;
         }
     }
 
