--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.css
@@ -112,7 +112,7 @@
   position: relative;
 }
 .flashcard .flashcard-body .card-container.on-drag-hover:not(.focused) {
-  padding-top: 100px;
+  padding-bottom: 100px;
 }
 .flashcard .flashcard-body .card-container label {
   display: -webkit-flex;
