--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.less
@@ -109,7 +109,7 @@
             position: relative;
 
             &.on-drag-hover:not(.focused) {
-                padding-top: 100px;
+                padding-bottom: 100px;
             }
 
             label {
