--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.css
@@ -161,6 +161,7 @@
 }
 @media (min-width: 600px) {
   .flashcard .flashcard-body .card-container .drag-btn {
+    cursor: pointer;
     position: absolute;
     left: -26px;
     top: calc(50% - 10px);
