--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.less
@@ -156,6 +156,7 @@
                 display: none;
 
                 @media(min-width: 600px) {
+                    cursor: pointer;
                     position: absolute;
                     left: -26px;
                     top: ~"calc(50% - 10px)";
