Fixes mobile issues with flip reset on prev\next

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
@@ -668,7 +668,7 @@ md-menu-item {
         //display: inline;
         width:100%;
         height:98px;
-        margin:0 auto;
+        margin:0 auto 20px auto;
     }
 
     .hideActions {
