--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.rtl.css
@@ -571,7 +571,7 @@ md-menu-item.blue svg {
   text-align: center;
   width: 100%;
   height: 98px;
-  margin: 0 auto;
+  margin: 0 auto 20px auto;
 }
 .itemPage .hideActions .top-wrapper {
   padding: 10px 0 24px 0;
