--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/chat.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/chat.rtl.css
@@ -154,9 +154,9 @@
   top: 0;
   right: 0;
   left: 0;
-  box-shadow: 0 0 1px black;
+  box-shadow: 0 0 1px #1d3a02;
   text-align: center;
-  background: #1d3a02;
+  background: #b9da9a;
   overflow: hidden;
   display: -webkit-flex;
   display: -ms-flex;
